--- a/index.html
+++ b/index.html
@@ -1,16 +1,39 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <title>Todo(JS)</title>
+    <meta charset="UTF-8" />
+  </head>
 
-<head>
-	<title>Parcel Sandbox</title>
-	<meta charset="UTF-8" />
-</head>
-
-<body>
-	<div id="app"></div>
-
-	<script src="src/index.js">
-	</script>
-</body>
-
+  <body>
+    <div class="input-area">
+      <input placeholder="Todoを入力" />
+      <button>追加</button>
+    </div>
+    <div class="incomplete-area">
+      <p class="title">未完了のTodo</p>
+      <ul>
+        <li>Todoです</li>
+        <div class="list-row">
+          <button>完了</button>
+          <button>削除</button>
+        </div>
+        <li>Todoです</li>
+        <div class="list-row">
+          <button>完了</button>
+          <button>削除</button>
+        </div>
+      </ul>
+    </div>
+    <div class="complete-area">
+      <p class="title">完了したTodo</p>
+      <ul>
+        <div class="list-row">
+          <li>Todoでした</li>
+          <button>戻す</button>
+        </div>
+      </ul>
+    </div>
+    <script src="src/index.js"></script>
+  </body>
 </html>
