--- a/index.html
+++ b/index.html
@@ -12,27 +12,11 @@
     </div>
     <div class="incomplete-area">
       <p class="title">未完了のTodo</p>
-      <ul id="incomplete-list">
-        <li>Todoです</li>
-        <div class="list-row">
-          <button>完了</button>
-          <button>削除</button>
-        </div>
-        <li>Todoです</li>
-        <div class="list-row">
-          <button>完了</button>
-          <button>削除</button>
-        </div>
-      </ul>
+      <ul id="incomplete-list"></ul>
     </div>
     <div class="complete-area">
       <p class="title">完了したTodo</p>
-      <ul id="complete-list">
-        <div class="list-row">
-          <li>Todoでした</li>
-          <button>戻す</button>
-        </div>
-      </ul>
+      <ul id="complete-list"></ul>
     </div>
     <script src="src/index.js"></script>
   </body>
